# fumohouse_web

./: .env  .env.example  Cargo.toml  LICENSE.txt  README.md
markdown/: home.md
markdown/policy/: code_of_conduct.md  contributor_agreement.md  policy.md
markdown/rules/: code_of_conduct.md  contributor_agreement.md  rules.md
migrations/2022-04-26-060427_create_users/: up.sql
migrations/2022-05-01-232031_create_sessions/: up.sql
src/: main.rs  schema.rs
src/db/: mod.rs  schema.rs
src/db/models/: mod.rs  session.rs  user.rs
src/routes/: account.rs  auth.rs  mod.rs  pages.rs
src/util/: captcha.rs  csrf.rs  markdown.rs  messages.rs  mod.rs  session.rs
static/css/: footer.css  forms.css  markdown.css  nav.css  style.css
templates/: base.html.tera  index.html.tera  login.html.tera  markdown.html.tera  register.html.tera
templates/account/: edit.html.tera
templates/auth/: login.html.tera  register.html.tera
templates/includes/: footer.html.tera  nav.html.tera
templates/macros/: form.html.tera  nav.html.tera  nav_util.tera
