[package]
name = "fumohouse_web"
version = "0.1.0"
edition = "2021"

[dependencies]
# Rocket
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "bf84b1c", features = ["secrets"] }
rocket_dyn_templates = { git = "https://github.com/SergioBenitez/Rocket", rev = "bf84b1c", features = ["tera"] }
rocket_sync_db_pools = { git = "https://github.com/SergioBenitez/Rocket", rev = "bf84b1c", features = ["diesel_postgres_pool"] }

# Crypto
argon2 = "0.4"
sha2 = "0.10"
rand = "0.8"

# Logging
fern = { version = "0.6", features = ["colored"] }
log = "0.4"

# Other
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "1.4", features = ["postgres", "chrono"] }
chrono = "0.4"
dotenvy = "0.15"